fixed squish prob

--- a/css/About.css
+++ b/css/About.css
@@ -21,6 +21,7 @@
 		font-family: 'Sacramento', cursive;
 		color: lightcoral;
 		margin: 0;
+		font-size: 75px;
 	}
 	.section1 {
 		display: flex;
@@ -100,10 +101,8 @@
 		margin: 0;
 		display: flex;
 		justify-content: center;
+		font-size: 30px;
 	}
-
-
-
 	.section1 {
 		display: flex;
 	    justify-content: center;
